modified indext adn assets based on semantics

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Website</title>
+    <title>Horiseon | Leading a new generation</title>
 </head>
 <!--end of head-->
 <body>
     <!--start header-->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,17 +23,16 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </div> <!--end of header-->
 
-    <!--starts hero-->
-    <div class="hero">
-
-    </div> 
+    <!--starts hero with the background banner img-->
+    <figure class="hero" role="img" aria-label="Business meeting">
     <!--ends hero-->
 
     <!--starts content-->
-    <div class="content">
+    <main>
+        <section class="services">
         <div id="search-engine-optimization" class="service">
             <img src="./assets/images/search-engine-optimization.jpg"  class="float-left img"/>
             <h2 class="h2">Search Engine Optimization</h2>
